--- a/src/components/List/List.module.scss
+++ b/src/components/List/List.module.scss
@@ -1,23 +1,45 @@
 .wrapper {
-  margin-top: 30px;
+    margin-top: 30px;
+    .upperTable{
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 20px;
+      a{
+        text-decoration: none;
+        color:white;
+        font-size: 25px;
+        font-weight: bold;
+        border-radius: 20px;
+        background-color: rgba(0, 0, 0, 0.82);
+        width: 200px;
+        padding: 5px;
+        text-align: center;
+      }
+    }
 
-  h1 {
-    margin-bottom: 20px;
-  }
 
-  .liWrapper {
-    &:hover {
-      background-color: rgb(0, 0, 0);
+
+  .itemHeader{
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr 1fr 1fr 1fr;
+    text-align: center;
+    background-color: rgba(224, 224, 224, 0.5) ;
+    height: 60px;
+    h3{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 60px;
+      border: 1px rgba(128, 128, 128, 0.15) solid;
     }
   }
-
   .item {
     display: grid;
     grid-template-columns: 1fr 2fr 1fr 1fr 1fr 1fr;
     text-align: center;
 
     &:hover {
-      background-color: rgba(143, 161, 168, 0.17);
+      background-color: rgba(224, 224, 224, 0.5);
     }
 
     .red {
@@ -43,6 +65,11 @@
     justify-content: end;
     font-weight: bold;
     cursor: pointer;
+    .notActive{
+      color: grey;
+      cursor: auto;
+    }
+    .active{}
   }
 }
 
